--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Relatório das redes sociais</h1>
+        <nav>
+            <a href="index.html">Mundo</a>
+                <a href="#">Minha escola</a>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
