--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <main class="graficos-section">
         <section id="graficos-container" 
          class="graficos-container">
-         <!-- crie os gráficos aqui -->
+         <!-- crie os gráficos/texto aqui -->
         </section>
     </main>
     <footer>
         <p>Desenvolvido por m.k.n </p>
     </footer>
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
 </html>
